5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1724_2527.log
== TEST (2019-05-14 11:16:47) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
y = 0
while(y < x):
	y = y + 1
	if(x % y == 0):
		print(y)
		total = total + y
if(total == x):
	print("PERFEITO")
else:
	print("NAO PERFEITO")

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = total + y
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:00) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
y = 0
total = 0
while(y < x):
	y = y + 1
	if(x % y == 0):
		print(y)
		total = total + y
if(total == x):
	print("PERFEITO")
else:
	print("NAO PERFEITO")

		
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:30) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
y = 0
total = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		print(y)
		total = total + y
if(total == x):
	print("PERFEITO")
else:
	print("NAO PERFEITO")

		
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:17:37) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
y = 0
total = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		print(y)
		total = total + y
if(total == x):
	print("PERFEITO")
else:
	print("NAO PERFEITO")

		
-- EXECUTION TIME:
0.217715
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
NAO PERFEITO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
